# rules_js_experiments

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-rules_js_experiments  graphql-codegen-launcher.mjs  graphql-codegen.bzl  main.ts  package.json  pnpm-lock.yaml  schema.graphql  thing.spec.ts  thing.ts  tsconfig.json
ts_proto_library/: BUILD.bazel  typescript_proto_library.bzl
