load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load(":graphql-codegen.bzl", "gqlgen")

npm_link_all_packages()

filegroup(
    name = "schema",
    srcs = ["schema.graphql"],
)

js_binary(
    name = "launcher",
    data = [
        ":node_modules/typescript",
        "//:node_modules/@graphql-codegen/cli",
        "//:node_modules/@graphql-codegen/typescript",
    ],
    entry_point = "graphql-codegen-launcher.mjs",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "thing",
    srcs = [
        "thing.ts",
    ],
    tsconfig = {},
)

js_binary(
    name = "thing_js",
    data = ["thing"],
    entry_point = "thing.js",
)

gqlgen(
    name = "gen",
    out = "types.ts",
    config = {
        "plugins": ["typescript"],
    },
    schemas = ":schema",
)
